Source/Unity3D/UnityCommon/LuaScriptCoreForUnity.h

    
    /**
     创建Lua上下文对象

     @return 上下文对象标识
     */
	LuaScriptCoreApi extern int createLuaContext();
    
    /**
     释放对象
     
     @param objectId 对象ID
     */
	LuaScriptCoreApi extern void releaseObject(int objectId);
    
    /**
     添加Lua的搜索路径
     
     @param nativeContextId 本地上下文对象ID
     @param path 路径
     */
	LuaScriptCoreApi extern void addSearchPath(int nativeContextId, const char *path);
    
    /**
     设置异常处理器

     @param nativeContextId 本地上下文对象ID
     @param handler 处理器
     */
	LuaScriptCoreApi extern void setExceptionHandler (int nativeContextId, LuaExceptionHandlerPtr handler);
    
    /**
     解析Lua脚本
     
     @param nativeContextId 本地上下文对象ID
     @param script Lua脚本
     @param scriptControllerId 脚本控制器标识
     @param result 返回值(输出参数)
     
     @return 返回值的缓冲区大小
     */
	LuaScriptCoreApi extern int evalScript(int nativeContextId, const char *script, int scriptControllerId, const void **result);
    
    
    /**
     从文件中解析Lua脚本

     @param nativeContextId 本地上下文对象ID
     @param filePath Lua文件路径
     @param scriptControllerId 脚本控制器标识
     @param result 返回值（输出参数）
     
     @return 返回值的缓冲区大小
     */
	LuaScriptCoreApi extern int evalScriptFromFile(int nativeContextId, const char *filePath, int scriptControllerId, const void **result);
    
    /**
     调用Lua方法

     @param nativeContextId 本地上下文对象ID
     @param methodName 方法名称
     @param params 参数列表
     @param scriptControllerId 脚本控制器标识
     @param result 返回值（输出参数）
     
     @return 返回值的缓冲区大小
     */
	LuaScriptCoreApi extern int callMethod(int nativeContextId, const char* methodName, const void *params, int scriptControllerId, const void **result);
    
    
    /**
     注册Lua方法

     @param nativeContextId 本地上下文对象ID
     @param methodName 方法名称
     @param methodPtr 方法处理器指针
     */
	LuaScriptCoreApi extern void registerMethod(int nativeContextId, const char *methodName, LuaMethodHandlerPtr methodPtr);